--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,9 @@ language: java
 jdk:
   - oraclejdk8
 
-script: ./gradlew test -i
+before_install:
+  - export TZ=Europe/Paris
+
+script:
+  - date
+  - ./gradlew test -i
