--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ app.url=
 database.drop-create=
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl.auto=none
 spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
