--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,7 +5,7 @@ app.url=http://urlopia.example.com
 database.drop-create=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl.auto=none
 spring.datasource.url=jdbc:postgresql://localhost:5432/urlopiadb
 spring.datasource.username=user
 spring.datasource.password=password
