--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,7 +2,7 @@
 app.url=http://urlopia.example.com
 
 # Database
-database.drop-create=true
+dropCreate=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl.auto=none
