--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -41,7 +41,7 @@ mail.template.prefix=/mails
 mail.template.suffix=.hbs
 mail.receiver.host=poczta.example.com
 mail.receiver.folder=Inbox
-mail.receiver.idle-time=300000
+mail.receiver.idle.time=300000
 mail.bot.name=Urlopia
 mail.bot.address=urlopia@example.com
 
