--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ mail.template.prefix=
 mail.template.suffix=
 mail.receiver.host=
 mail.receiver.folder=
-mail.receiver.idle-time=
+mail.receiver.idle.time=
 mail.bot.name=
 mail.bot.address=
 
