Fixed drop-create issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ app.url=
 
 # Database
 dropCreate=
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver.class.name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl.auto=none
 spring.datasource.url=
