--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,7 +3,7 @@ app.url=http://urlopia.example.com
 
 # Database
 dropCreate=true
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver.class.name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl.auto=none
 spring.datasource.url=jdbc:postgresql://localhost:5432/urlopiadb
