--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.3.6.RELEASE'
+        springBootVersion = '1.4.2.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -13,6 +13,7 @@ buildscript {
 
 plugins {
     id "org.sonarqube" version "2.0.1"
+    id "com.gorylenko.gradle-git-properties" version "1.4.17"
 }
 
 configurations {
@@ -22,6 +23,8 @@ configurations {
 apply plugin: 'java'
 apply plugin: 'spring-boot'
 apply plugin: 'jacoco'
+
+version = "0.4.12"
 
 jacoco {
     toolVersion = "0.7.1.201405082137"
@@ -75,9 +78,14 @@ dependencies {
     compile('com.github.jknack:handlebars:4.0.6')
     compile('org.apache.poi:poi:3.14')
     compile('org.apache.poi:poi-ooxml:3.14')
+    compile("org.springframework.boot:spring-boot-starter-actuator")
 
     driver('postgresql:postgresql:9.1-901.jdbc4')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.mockito:mockito-core:1.+')
+}
+
+springBoot  {
+    buildInfo()
 }
