--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 app.url=
 
 # Database
-dropCreate=
+drop.create=
 spring.datasource.driver.class.name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl.auto=none
