data visible under the login layer after session expires resolves #53

--- a/build.gradle
+++ b/build.gradle
@@ -89,3 +89,10 @@ dependencies {
 springBoot  {
     buildInfo()
 }
+
+bootRun {
+    jvmArgs = [
+            "-Dspring.devtools.restart.enabled=false",
+    ]
+    addResources = true
+}
