set holidays as free days in reports, show report data to the last closed month

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ configurations {
 }
 
 apply plugin: 'java'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 apply plugin: 'jacoco'
 
 version = "0.4.18"
