Active Directory synchronization

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -44,6 +44,7 @@ mail.receiver.folder=Inbox
 mail.receiver.idle.time=300000
 mail.bot.name=Urlopia
 mail.bot.address=urlopia@example.com
+mail.storage.vacations.ec = urlopy@example.pl
 
 # Webtoken
 webtoken.secret=UrlopiaSecretKey
