History log flow refactoring
- change name 'history' to 'history log'
- refactor history log controller, service, repository
- add new history log input
- remove history controller
- update sql script - add remaining days and previous history log to history table
- update front-end to match to new api
- add jackson dependency to support java8 dates
- fix routing error on history page

--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     compile('org.apache.poi:poi:3.14')
     compile('org.apache.poi:poi-ooxml:3.14')
     compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1')
 
     driver('postgresql:postgresql:9.1-901.jdbc4')
 
