--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     compile('javax.servlet.jsp.jstl:javax.servlet.jsp.jstl-api:1.2.1')
     compile('javax.transaction:jta:1.1')
     compile('org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final')
+    compile('org.hibernate:hibernate-java8:5.0.11.Final')
     compile('org.springframework.boot:spring-boot-devtools')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
