--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ configurations {
     driver
 }
 
-version = "1.1.0"
+project.version = "1.1.1"
 
 jacoco {
     toolVersion = "0.7.1.201405082137"
@@ -34,7 +34,6 @@ sonarqube {
 
 jar {
     baseName = 'urlopia'
-    version = '1.1.0'
     manifest {
         attributes "Main-Class": "info.fingo.urlopia.UrlopiaApplication"
     }
