--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id "org.springframework.boot" version "2.5.2"
     id "org.sonarqube" version "2.5"
     id "com.gorylenko.gradle-git-properties" version "1.4.17"
+    id "io.freefair.lombok" version "6.1.0-m3"
 }
 
 project.ext.set("mainViewModule", project(":view.angular"))
