--- a/view.react/package.json
+++ b/view.react/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "sass": "^1.35.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
