--- a/view.react/package.json
+++ b/view.react/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap-icons": "^1.5.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
+    "react-datepicker": "^4.2.1",
     "react-date-range": "^1.3.0",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
