--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1')
     implementation('org.modelmapper:modelmapper:2.1.1')
+    implementation('com.itextpdf:itextpdf:5.5.13.2')
+
     runtimeOnly('org.postgresql:postgresql')
 
     testImplementation('org.spockframework:spock-core:2.0-groovy-3.0')
