--- a/view.react/package.json
+++ b/view.react/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.0.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
+    "formik": "^2.2.9",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -27,8 +28,9 @@
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "sass": "^1.35.2",
-    "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.9",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
