--- a/view.react/package.json
+++ b/view.react/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "classnames": "^2.3.1",
@@ -23,6 +24,7 @@
     "react-date-range": "^1.3.0",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-notifications-component": "^3.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
