--- a/view.react/package.json
+++ b/view.react/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -20,19 +23,20 @@
     "react-bootstrap-icons": "^1.5.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
-    "react-datepicker": "^4.2.1",
     "react-date-range": "^1.3.0",
+    "react-datepicker": "^4.2.1",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-notifications-component": "^3.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "react-spinners": "^0.11.0",
     "sass": "^1.35.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
-    "yup": "^0.32.9",
-    "uuid": "^8.3.2"
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
