--- a/view.react/package.json
+++ b/view.react/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@material-ui/core": "^4.12.3",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -27,6 +28,7 @@
     "react-datepicker": "^4.2.1",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-month-picker": "^1.3.11",
     "react-notifications-component": "^3.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
