--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1')
     implementation('org.modelmapper:modelmapper:2.1.1')
     implementation('com.itextpdf:itextpdf:5.5.13.2')
+    implementation("com.slack.api:bolt:1.12.1")
+    implementation("com.slack.api:bolt-servlet:1.12.1")
 
     runtimeOnly('org.postgresql:postgresql')
 
