--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,7 @@ mail.receiver.folder=Inbox
 mail.receiver.idle.time=300000
 mails.bot=
 mails.storage=
+
+# slack
+slack.bot-token=
+slack.signing-secret=
