--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
     id "io.freefair.lombok" version "6.1.0-m3"
 }
 
-project.ext.set("mainViewModule", project(":view.angular"))
+project.ext.set("mainViewModule", project(":view.react"))
 
 
 allprojects {
@@ -85,7 +85,7 @@ test {
 
 bootJar {
     archivesBaseName = 'urlopia'
-    from("${mainViewModule.projectDir}/public") {
+    from("${mainViewModule.projectDir}/build") {
         into "public"
     }
 }
