https://jira.fingo.info/browse/PRAK-150  Add endpoint for generating .zip with evidence reports

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ webtoken.secret=
 app.url=http://localhost:8080
 app.name=Urlopia
 
+spring.mvc.async.request-timeout = 1500000
+
 # database
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=
