https://jira.fingo.info/browse/PRAK-187 Allow to add multiple postfixes for teams in AD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ ad.containers.main=
 ad.groups.users=
 ad.groups.ec=
 ad.groups.b2b=
-ad.identifiers.team=Team
+ad.identifiers.team=Team,Guild
 ad.identifiers.business-part=Part
 
 # mail
