https://jira.fingo.info/browse/IJ-212 add health endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,7 @@ mails.storage=
 # slack
 slack.bot-token=
 slack.signing-secret=
+
+#health
+management.endpoints.web.base-path=/
+management.endpoints.web.exposure.include=health
