https://jira.fingo.info/browse/IJ-208 Create endpoint for darek to confirm users' presence

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,3 +49,6 @@ slack.signing-secret=
 #health
 management.endpoints.web.base-path=/
 management.endpoints.web.exposure.include=health
+
+# proxy
+proxy-token=
