--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id "jacoco"
     id "java"
     id "org.springframework.boot" version "2.5.2"
-    id "org.sonarqube" version "2.5"
+    id "org.sonarqube" version "3.3"
     id "com.gorylenko.gradle-git-properties" version "1.4.17"
     id "io.freefair.lombok" version "6.1.0-m3"
 }
@@ -20,24 +20,10 @@ java {
     targetCompatibility = JavaVersion.VERSION_16
 }
 
-
-jacoco {
-    toolVersion = "0.8.7"
-    reportsDirectory.set(layout.buildDirectory.dir("$buildDir/customJacocoReportDir"))
-}
-
-sonarqube {
-    properties {
-        property "sonar.projectName", project.projectName
-        property "sonar.projectKey", project.projectKey
-        property 'sonar.jdbc.url', project.jdbc.url
-        property 'sonar.jdbc.driverClassName', project.jdbc.driverClassName
-        property 'sonar.jdbc.username', project.jdbc.username
-        property 'sonar.jdbc.password', project.jdbc.password
-        property 'sonar.host.url', project.jdbc.host.url
-        property "sonar.sourceEncoding", "UTF-8"
-        property "sonar.projectVersion", "${rootProject.version}"
-        property "sonar.exclusions", "src/main/resources/public/js/libs/**"
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.enabled true
     }
 }
 
@@ -103,3 +89,5 @@ task bootRunWithView(type: BootRun) {
     def viewFiles = files("${mainViewModule.projectDir}")
     classpath = defaultClasspath + viewFiles
 }
+
+apply from: 'gradle/config/sonarqube.gradle'
