https://jira.fingo.info/browse/IJ-233 Change default sonarProjectKey property

--- a/gradle/config/sonarqube.gradle
+++ b/gradle/config/sonarqube.gradle
@@ -1,6 +1,6 @@
 ext {
     sonarProjectName = project.findProperty('sonarProjectName') ?: rootProject.name
-    sonarProjectKey = project.findProperty('sonarProjectKey') ?: 'urlopia'
+    sonarProjectKey = project.findProperty('sonarProjectKey') ?: 'info.fingo:urlopia'
 }
 
 sonarqube {
