https://jira.fingo.info/browse/IJ-234 Admin view with worker list load very long

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,6 @@ management.endpoints.web.exposure.include=health
 
 # proxy
 proxy-token=
+
+# presence confirmation
+urlopia.presence.confirmation.considered.months = 2
