--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,7 +41,8 @@ mail.receiver.folder=Inbox
 mail.receiver.idle.time=300000
 mails.bot=
 mails.storage=
-
+mail.sender.enabled=false
+mail.receiver.enabled=false
 # slack
 slack.bot-token=
 slack.signing-secret=
