https://jira.fingo.info/browse/IJ-258 Add flyway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,6 +37,8 @@ spring.mail.properties.smtp-auth=true
 mail.template.prefix=/mails
 mail.template.suffix=.hbs
 mail.receiver.host=
+mail.receiver.username=
+mail.receiver.password=
 mail.receiver.folder=Inbox
 mail.receiver.idle.time=300000
 mails.bot=
