https://jira.fingo.info/browse/IJ-246 Add SSO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,8 @@ ad.groups.ec=
 ad.groups.b2b=
 ad.identifiers.team=Team,Guild
 ad.identifiers.business-part=Part
+azure.ad.clientId=
+azure.ad.tenantId=
 
 # mail
 spring.mail.host=
