--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-mail')
     implementation('org.springframework.boot:spring-boot-starter-security')
+    implementation("com.auth0:java-jwt:4.0.0")
+    implementation("com.auth0:jwks-rsa:0.21.1")
     implementation('io.jsonwebtoken:jjwt:0.6.0')
     implementation('com.github.jknack:handlebars:4.0.6')
     implementation('org.apache.poi:poi:4.0.1')
