--- a/view.react/package.json
+++ b/view.react/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@azure/msal-browser": "^2.28.3",
     "@azure/msal-react": "^1.4.7",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
-    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.10.5",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.20",
+    "@types/react-dom": "^18.0.6",
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
@@ -24,13 +29,10 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-bootstrap-icons": "^1.5.0",
-    "react-bootstrap-table-next": "^4.0.3",
-    "react-bootstrap-table2-filter": "^1.3.3",
     "react-date-range": "^1.3.0",
     "react-datepicker": "^4.2.1",
-    "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
-    "react-month-picker": "^1.3.11",
+    "react-month-picker": "^2.2.1",
     "react-notifications-component": "^3.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
@@ -38,6 +40,7 @@
     "react-select": "^4.3.1",
     "react-spinners": "^0.11.0",
     "sass": "^1.35.2",
+    "typescript": "^4.8.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
@@ -75,7 +78,6 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "react-dates": "^21.8.0"
+    "eslint-plugin-simple-import-sort": "^7.0.0"
   }
 }
