--- a/view.react/package.json
+++ b/view.react/package.json
@@ -3,47 +3,47 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@azure/msal-browser": "^2.28.3",
-    "@azure/msal-react": "^1.4.7",
+    "@azure/msal-browser": "^2.30.0",
+    "@azure/msal-react": "^1.4.9",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
-    "@mui/material": "^5.10.5",
-    "@reduxjs/toolkit": "^1.6.1",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.10.10",
+    "@reduxjs/toolkit": "^1.8.6",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@types/node": "^18.7.18",
-    "@types/react": "^18.0.20",
+    "@types/node": "^18.11.3",
+    "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "animate.css": "^4.1.1",
-    "axios": "^0.21.1",
-    "bootstrap": "^5.0.2",
-    "classnames": "^2.3.1",
-    "date-fns": "^2.23.0",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.2",
+    "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "formik": "^2.2.9",
-    "moment": "^2.29.1",
-    "prop-types": "^15.7.2",
+    "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.4",
-    "react-bootstrap-icons": "^1.5.0",
-    "react-date-range": "^1.3.0",
-    "react-datepicker": "^4.2.1",
+    "react-bootstrap": "^2.5.0",
+    "react-bootstrap-icons": "^1.9.1",
+    "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-month-picker": "^2.2.1",
-    "react-notifications-component": "^3.1.0",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
+    "react-notifications-component": "^3.4.1",
+    "react-redux": "^7.2.9",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-select": "^4.3.1",
-    "react-spinners": "^0.11.0",
-    "sass": "^1.35.2",
-    "typescript": "^4.8.3",
+    "react-spinners": "^0.13.6",
+    "sass": "^1.55.0",
+    "typescript": "^4.8.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
-    "yup": "^0.32.9"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
