--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,3 +58,7 @@ proxy-token=
 
 # presence confirmation
 urlopia.presence.confirmation.considered.months = 2
+
+#automatic days add
+# 1 january 00:05:00
+urlopia.automatic.days.add.cron = 0 5 0 1 1 ?
