https://jira.fingo.info/browse/IJ-315 Add reading admin permissions from AD group

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ ad.containers.main=
 ad.groups.users=
 ad.groups.ec=
 ad.groups.b2b=
+ad.groups.admin=
 ad.identifiers.team=Team,Guild
 azure.ad.clientId=
 azure.ad.tenantId=
