https://jira.fingo.info/browse/IJ-318 Prepare frontend for no-auth - move all msal used to separate helper

--- a/view.react/package.json
+++ b/view.react/package.json
@@ -80,6 +80,8 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-simple-import-sort": "^7.0.0"
+    "axios-mock-adapter": "^1.21.2",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "yarn": "^1.22.19"
   }
 }
