--- a/view.react/package.json
+++ b/view.react/package.json
@@ -80,6 +80,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-notifications-component": "^3.1.1",
+    "@types/react-router-dom": "^5.3.3",
     "axios-mock-adapter": "^1.21.2",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "yarn": "^1.22.19"
