--- a/build.gradle
+++ b/build.gradle
@@ -35,29 +35,33 @@ repositories {
 ext {
     versions = [
             //spring
-            springBoot   : '2.7.7',
+            springBoot     : '2.7.7',
 
             //oauth
-            oauthJavaJwt : '4.2.1',
-            oauthJwksRsa : '0.21.2',
+            oauthJavaJwt   : '4.2.1',
+            oauthJwksRsa   : '0.21.2',
 
             //mail
-            handlebars   : '4.3.1',
+            handlebars     : '4.3.1',
 
             //excel
-            apachePoi    : '5.2.3',
+            apachePoi      : '5.2.3',
 
             //pdf
-            itextPdf     : '5.5.13.3',
+            itextPdf       : '5.5.13.3',
 
             //modelMapping
-            modelMapper  : '3.1.1',
+            modelMapper    : '3.1.1',
 
             //slack
-            slackApiBolt : '1.27.2',
+            slackApiBolt   : '1.27.2',
 
             //testing
-            spock       : '2.0-groovy-3.0'
+            spock          : '2.0-groovy-3.0',
+
+            //h2
+            h2             : '2.1.214'
+
 
     ]
 }
@@ -65,7 +69,6 @@ ext {
 
 dependencies {
     implementation platform("org.springframework.boot:spring-boot-dependencies:${versions.springBoot}")
-    developmentOnly('org.springframework.boot:spring-boot-devtools')
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.boot:spring-boot-starter-mail")
@@ -90,8 +93,8 @@ dependencies {
     // Database migration
     implementation("org.flywaydb:flyway-core")
 
-    runtimeOnly('org.postgresql:postgresql')
-    developmentOnly('com.h2database:h2')
+    runtimeOnly("org.postgresql:postgresql")
+    developmentOnly("com.h2database:h2:${versions.h2}")
 
     testImplementation("org.spockframework:spock-core:${versions.spock}")
     testImplementation("org.codehaus.groovy:groovy")
