--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,15 +42,15 @@ jobs:
 
     - name: npm install
       run: npm install
-      working-directory: ${{ FRONTEND_DIR }}
+      working-directory: ${{ env.FRONTEND_DIR }}
 
     - name: npm run build
       run: npm run build --if-present
-      working-directory: ${{ FRONTEND_DIR }}
+      working-directory: ${{ env.FRONTEND_DIR }}
 
     - name: run frontend tests
       run: npm test
-      working-directory: ${{ FRONTEND_DIR }}
+      working-directory: ${{ env.FRONTEND_DIR }}
 
   check-linters:
     runs-on: ubuntu-latest
@@ -63,6 +63,6 @@ jobs:
           node-version: 18
           cache: 'npm'
       - run: npm install
-        working-directory: ${{ FRONTEND_DIR }}
+        working-directory: ${{ env.FRONTEND_DIR }}
       - run: npm run lint
-        working-directory: ${{ FRONTEND_DIR }}
+        working-directory: ${{ env.FRONTEND_DIR }}
