`setup-node` also need changed working dir...

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -59,6 +59,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Use Node.js 18
         uses: actions/setup-node@v3
+        working-directory: ${{ env.FRONTEND_DIR }}
         with:
           node-version: 18
           cache: 'npm'
