--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,13 +14,13 @@ env:
 
 jobs:
   test:
-    name: Run all tests
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [ 12, 18 ]
+
+    name: Run all tests on Node ${{ matrix.node-version }}
 
     steps:
     - uses: actions/checkout@v3
@@ -59,10 +59,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Use Node.js 18
         uses: actions/setup-node@v3
-        working-directory: ${{ env.FRONTEND_DIR }}
         with:
           node-version: 18
           cache: 'npm'
+          cache-dependency-path: '${{ env.FRONTEND_DIR }}/package-lock.json'
       - run: npm install
         working-directory: ${{ env.FRONTEND_DIR }}
       - run: npm run lint
