We are not ready for current LTS yet. Test with previous LTS

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ 12, 18 ]
+        node-version: [ 12, 14, 16 ]
 
     name: Run all tests on Node ${{ matrix.node-version }}
 
