IJ-337 swat to vite

--- a/view.react/.env
+++ b/view.react/.env
@@ -1,3 +1,8 @@
 REACT_APP_OAUTH_CLIENT_ID=
 REACT_APP_OAUTH_TENANT_ID=
-REACT_APP_AUTH_MODE=AUTH
+REACT_APP_AUTH_MODE=NO-AUTH
+
+
+VITE_OAUTH_CLIENT_ID=
+VITE_OAUTH_TENANT_ID=
+VITE_AUTH_MODE=NO-AUTH
