--- a/view.react/package.json
+++ b/view.react/package.json
@@ -38,7 +38,6 @@
     "react-notifications-component": "^3.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "react-spinners": "^0.11.0",
     "sass": "^1.35.2",
@@ -48,8 +47,9 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
     "test": "react-scripts test",
     "lint": "eslint ./src --ext .js --ext .jsx",
     "lint-fix": "eslint ./src --ext .js --ext .jsx --fix"
@@ -82,8 +82,13 @@
   "devDependencies": {
     "@types/react-notifications-component": "^3.1.1",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^4.0.0",
     "axios-mock-adapter": "^1.21.2",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "vite": "^4.3.2",
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.2.0",
     "yarn": "^1.22.19"
   }
 }
