--- a/view.react/package.json
+++ b/view.react/package.json
@@ -50,7 +50,8 @@
     "start": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
-    "test": "react-scripts test",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
     "lint": "eslint ./src --ext .js --ext .jsx --ext .tsx",
     "lint-fix": "eslint ./src --ext .js --ext .jsx --fix --ext .tsx"
   },
@@ -90,9 +91,11 @@
     "axios-mock-adapter": "^1.21.2",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "jsdom": "^21.1.1",
     "vite": "^4.3.2",
     "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.30.1",
     "yarn": "^1.22.19"
   }
 }
