--- a/view.react/.env
+++ b/view.react/.env
@@ -1,8 +1,3 @@
-REACT_APP_OAUTH_CLIENT_ID=
-REACT_APP_OAUTH_TENANT_ID=
-REACT_APP_AUTH_MODE=NO-AUTH
-
-
 VITE_OAUTH_CLIENT_ID=
 VITE_OAUTH_TENANT_ID=
-VITE_AUTH_MODE=NO-AUTH
+VITE_AUTH_MODE=AUTH
